--- a/WebSellBuy/packages/repositories.config
+++ b/WebSellBuy/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\DB_Entity_DAL\packages.config" />
   <repository path="..\WebSellBuy\packages.config" />
 </repositories>
