addede next changes

--- a/WebSellBuy/WebSellBuy/WebSellBuy.csproj
+++ b/WebSellBuy/WebSellBuy/WebSellBuy.csproj
@@ -185,6 +185,22 @@
     <Content Include="Content\css\bootstrap\bootstrap.css" />
     <Content Include="Content\css\bootstrap\bootstrap.min.css" />
     <Content Include="Content\css\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\css\bootstrap-grid.css" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\css\bootstrap-grid.min.css" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\css\bootstrap-reboot.css" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\css\bootstrap-reboot.min.css" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\css\bootstrap.css" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\js\bootstrap.js" />
+    <Content Include="Content\css\ManagerStyle\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\css\ManagerStyle\datatables\dataTables.bootstrap4.css" />
+    <Content Include="Content\css\ManagerStyle\datatables\dataTables.bootstrap4.js" />
+    <Content Include="Content\css\ManagerStyle\datatables\jquery.dataTables.js" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\css\font-awesome.css" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\css\ManagerStyle\sb-admin.css" />
+    <Content Include="Content\css\ManagerStyle\sb-admin.min.css" />
     <Content Include="Content\css\web\infoProfile.css" />
     <Content Include="Content\gif\ajax-loader.gif" />
     <Content Include="Content\images\fontAuthentication\fonBody.jpg" />
@@ -209,6 +225,18 @@
     <Content Include="Content\js\bootsrap\bootstrap.js" />
     <Content Include="Content\js\bootsrap\bootstrap.min.js" />
     <Content Include="Content\js\jquery\jquery.js" />
+    <Content Include="Content\js\ManagerJs\chart.js\Chart.bundle.js" />
+    <Content Include="Content\js\ManagerJs\chart.js\Chart.bundle.min.js" />
+    <Content Include="Content\js\ManagerJs\chart.js\Chart.js" />
+    <Content Include="Content\js\ManagerJs\chart.js\Chart.min.js" />
+    <Content Include="Content\js\ManagerJs\jquery-easing\jquery.easing.compatibility.js" />
+    <Content Include="Content\js\ManagerJs\jquery-easing\jquery.easing.js" />
+    <Content Include="Content\js\ManagerJs\jquery-easing\jquery.easing.min.js" />
+    <Content Include="Content\js\ManagerJs\jquery\jquery.js" />
+    <Content Include="Content\js\ManagerJs\jquery\jquery.min.js" />
+    <Content Include="Content\js\ManagerJs\popper\popper.js" />
+    <Content Include="Content\js\ManagerJs\popper\popper.min.js" />
+    <Content Include="Content\js\ManagerJs\sb-admin.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -218,6 +246,39 @@
     <Content Include="Content\css\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\css\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\css\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\animated.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\bordered-pulled.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\core.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\fixed-width.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\font-awesome.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\icons.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\larger.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\list.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\mixins.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\path.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\rotated-flipped.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\screen-reader.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\stacked.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\less\variables.less" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\font-awesome.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_animated.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_core.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_icons.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_larger.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_list.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_mixins.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_path.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_screen-reader.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_stacked.scss" />
+    <Content Include="Content\css\ManagerStyle\font-awesome\scss\_variables.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -258,23 +319,12 @@
     <Content Include="Views\Layout\_LayoutPageBase.cshtml" />
     <Content Include="Views\Authentication\Authorization.cshtml" />
     <Content Include="Views\Authentication\SignIn.cshtml" />
-    <Content Include="Views\Manager\Manager.cshtml" />
     <Content Include="Views\UserProfile\UserProfile.cshtml" />
+    <Content Include="Views\Manager\Manager.cshtml" />
+    <Content Include="Views\Manager\test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\css\ManagerStyle\bootstrap\css\" />
-    <Folder Include="Content\css\ManagerStyle\bootstrap\js\" />
-    <Folder Include="Content\css\ManagerStyle\datatables\" />
-    <Folder Include="Content\css\ManagerStyle\font-awesome\css\" />
-    <Folder Include="Content\css\ManagerStyle\font-awesome\fonts\" />
-    <Folder Include="Content\css\ManagerStyle\font-awesome\less\" />
-    <Folder Include="Content\css\ManagerStyle\font-awesome\scss\" />
-    <Folder Include="Content\js\ManagerJs\chart.js\" />
-    <Folder Include="Content\js\ManagerJs\datatables\" />
-    <Folder Include="Content\js\ManagerJs\jquery-easing\" />
-    <Folder Include="Content\js\ManagerJs\jquery\" />
-    <Folder Include="Content\js\ManagerJs\popper\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
