--- a/WebSellBuy/WebSellBuy/Web.config
+++ b/WebSellBuy/WebSellBuy/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebSellBuy-20170905112349.mdf;Initial Catalog=aspnet-WebSellBuy-20170905112349;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Sell_BuyEntities" connectionString="metadata=res://*/MedelsDataBase.SellBuy_Model.csdl|res://*/MedelsDataBase.SellBuy_Model.ssdl|res://*/MedelsDataBase.SellBuy_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WORK-PC;initial catalog=Sell_Buy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -57,4 +57,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
 </configuration>
