--- a/WebSellBuy/WebSellBuy/WebSellBuy.csproj
+++ b/WebSellBuy/WebSellBuy/WebSellBuy.csproj
@@ -199,6 +199,7 @@
     <Content Include="Content\css\ManagerStyle\font-awesome\css\font-awesome.css" />
     <Content Include="Content\css\ManagerStyle\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\css\ManagerStyle\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\css\ManagerStyle\ManagerShopsCss\mangerShops.css" />
     <Content Include="Content\css\ManagerStyle\sb-admin.css" />
     <Content Include="Content\css\ManagerStyle\sb-admin.min.css" />
     <Content Include="Content\css\web\infoProfile.css" />
@@ -234,6 +235,7 @@
     <Content Include="Content\js\ManagerJs\jquery-easing\jquery.easing.min.js" />
     <Content Include="Content\js\ManagerJs\jquery\jquery.js" />
     <Content Include="Content\js\ManagerJs\jquery\jquery.min.js" />
+    <Content Include="Content\js\ManagerJs\mangerOperations.js" />
     <Content Include="Content\js\ManagerJs\popper\popper.js" />
     <Content Include="Content\js\ManagerJs\popper\popper.min.js" />
     <Content Include="Content\js\ManagerJs\sb-admin.min.js" />
@@ -321,7 +323,7 @@
     <Content Include="Views\Authentication\SignIn.cshtml" />
     <Content Include="Views\UserProfile\UserProfile.cshtml" />
     <Content Include="Views\Manager\Manager.cshtml" />
-    <Content Include="Views\Manager\test.cshtml" />
+    <Content Include="Views\Manager\ManagerShops.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
