not completed Get all shops complete create new shop

--- a/DB_Entity_DAL/DB_Entity_DAL.csproj
+++ b/DB_Entity_DAL/DB_Entity_DAL.csproj
@@ -55,8 +55,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB_Operations\DB-Language.cs" />
-    <Compile Include="DB_Operations\DB-UsersMagazine.cs" />
+    <Compile Include="DB_Operations\DB_Language.cs" />
+    <Compile Include="DB_Operations\DB_Shop.cs" />
     <Compile Include="DB_Operations\DB_Basket.cs" />
     <Compile Include="DB_Operations\DB_Brand.cs" />
     <Compile Include="DB_Operations\DB_Category.cs" />
